Write Up: fix readability on larger screens

--- a/styles/Tags.module.scss
+++ b/styles/Tags.module.scss
@@ -25,3 +25,10 @@
     }
   }
 }
+
+//big screen
+@media only screen and (min-width: 1920px) {
+  .Tags {
+    margin: 40px 300px;
+  }
+}
