--- a/styles/WriteUp.module.scss
+++ b/styles/WriteUp.module.scss
@@ -78,3 +78,26 @@
     }
   }
 }
+
+//big screen
+@media only screen and (min-width: 1920px) {
+  .WriteUp {
+    margin: 50px 500px;
+
+    .title {
+      font-size: 48px;
+      margin: 30px 0;
+    }
+
+    a {
+      font-size: 20px;
+    }
+
+    .content {
+      font-size: 20px;
+      a {
+        font-size: 20px;
+      }
+    }
+  }
+}
